--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,8 @@
 MONGO_URI = mongodb+srv://devrajtiwari229:devtiwari123@cluster0.y9i830m.mongodb.net/socialmedia10
+
+MAIL_ID = YOUR_MAIL_ID
+MAIL_PWD = YOUR_APP_PASSWORD
+
+IMAGEKIT_PUBLIC_KEY = YOUR_KEY
+IMAGEKIT_PRIVATE_KEY = YOUR_KEY
+IMAGEKIT_ENDPOINT_URL = YOUR_URL
