--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "dotenv": "^16.4.5",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-fileupload": "^1.5.0",
     "express-session": "^1.18.0",
+    "fileupload": "^1.0.0",
     "http-errors": "~1.6.3",
+    "imagekit": "^5.0.1",
     "mongoose": "^8.4.3",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "razorpay": "^2.9.4",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.5"
